--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 *.log
 
 # BlueJ files
-*.ctxt
+.env.*
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -18,7 +18,9 @@
 *.zip
 *.tar.gz
 *.rar
+node_modules/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
