--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:3000": "vite --port 3000",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "start": "vite preview",
     "test": "jest",
     "test:auto": "jest --watch --coverage"
   },
